Commit Message: "Updated .gitignore file to exclude virtual environment files and IDE settings"

--- a/.gitignore
+++ b/.gitignore
@@ -714,6 +714,8 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
+venv
+.idea
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
